Delete & Insert Table Column - User, Contents Table
